--- a/docs/books/theory/_main.tex
+++ b/docs/books/theory/_main.tex
@@ -207,8 +207,7 @@ Discrete Time Stochastic Processes & Hansen & \emph{Stochastic Processes} (2. ed
 \hypertarget{life-insurance-mathematics}{%
 \chapter{Life Insurance Mathematics}\label{life-insurance-mathematics}}
 
-\hypertarget{section}{%
-\chapter{}\label{section}}
+Noget indhold
 
 \hypertarget{finance}{%
 \chapter{Finance}\label{finance}}
@@ -2347,6 +2346,8 @@ d\mathbf{M}_t=-r_t\mathbf{M}_t\ dt-\mathbf{M}_t\lambda_t^\top\ dW_t.\tag{14.40}
 
 \hypertarget{non-life-insurance-mathematics}{%
 \chapter{Non-Life Insurance Mathematics}\label{non-life-insurance-mathematics}}
+
+Noget indhold
 
 \hypertarget{probabilistic-machine-learning}{%
 \chapter{Probabilistic Machine Learning}\label{probabilistic-machine-learning}}
