--- a/docs/books/theory/_main.tex
+++ b/docs/books/theory/_main.tex
@@ -87,7 +87,7 @@ non-life insurance, stochastic differential equations.},
 \makeatother
 \subtitle{Msc in Actuarial Mathematics}
 \author{Joakim Bilyk}
-\date{February 07, 2023}
+\date{February 08, 2023}
 
 \begin{document}
 %\maketitle
@@ -175,8 +175,8 @@ non-life insurance, stochastic differential equations.}
 \setcounter{page}{1}
 \pagenumbering{arabic}
 \pagestyle{fancy}
-\hypertarget{references}{%
-\chapter{References}\label{references}}
+\hypertarget{abbreviations}{%
+\chapter{Abbreviations}\label{abbreviations}}
 
 Below is given the abbreviations used when referencing to books:
 
@@ -194,13 +194,18 @@ Source
 \end{minipage} \\
 \midrule()
 \endhead
+Life Insurance Mathematics & Asmussen & \emph{Risk and Insurance}: A Graduate Text by Soren Asmussen and Mogens Steffensen (2020). \\
 Finance & Bjork & \emph{Arbitrage Theory in Continuous Time (Fourth edition)} by Thomas Bjork, Oxford University Press (2019). \\
+Non-Life Insurance Mathematics & & \\
+Probabilistic Machine Learning & & \\
+Quantative Risk Management & & \\
 Measure Theory & Bjork & \emph{Arbitrage Theory in Continuous Time (Fourth edition)} by Thomas Bjork, Oxford University Press (2019). \\
 Linear Algebra & Wiki & Wikipedia \\
 Random Variables & Bjork & \emph{Arbitrage Theory in Continuous Time (Fourth edition)} by Thomas Bjork, Oxford University Press (2019). \\
 & Hansen & \emph{Stochastic Processes} (2. edition) by Ernst Hansen (2021). \\
-Continuous Time Stochastic Processes & Bjork & \emph{Arbitrage Theory in Continuous Time (Fourth edition)} by Thomas Bjork, Oxford University Press (2019). \\
 Discrete Time Stochastic Processes & Hansen & \emph{Stochastic Processes} (2. edition) by Ernst Hansen (2021). \\
+Continuous Time Stochastic Processes & Bjork & \emph{Arbitrage Theory in Continuous Time (Fourth edition)} by Thomas Bjork, Oxford University Press (2019). \\
+Linear Algebra & & \\
 \bottomrule()
 \end{longtable}
 
