--- a/docs/books/theory/_main.tex
+++ b/docs/books/theory/_main.tex
@@ -231,6 +231,10 @@ non-life insurance, stochastic differential equations.}
 \setcounter{page}{1}
 \pagenumbering{arabic}
 \pagestyle{fancy}
+\fancyhf{}
+\fancyhead[LE]{\fontsize{10}{12} \selectfont\nouppercase{\rightmark\hfill\leftmark}}
+\fancyhead[RO]{\fontsize{10}{12} \selectfont\nouppercase{\leftmark\hfill\rightmark}}
+\fancyfoot[LE,RO]{\hfill\thepage\hfill}
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
 
